# LDI

./: .env  Dockerfile_api  Dockerfile_celery  Dockerfile_redis  README.md  celery_beat.py  celery_worker.py  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  ci.yml
api/: Dockerfile  base.py  config.py  db.py  dependencies.py  main.py  tasks.py
api/models/: weather_model.py
api/routers/: weather_router.py
api/schema/: wether_schema.py
nginx/: Dockerfile  docker-entrypoint.sh
nginx/conf/: default.conf.template
tests/: conftest.py  test_db.py  test_mock.py  test_weather_endpoint.py
